comment fix v2